--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,17 @@
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+               <div class="img-holder">
                 <img
                   src="./images/portfolio-img-1.jpg"
                   alt="Экран компьютера с веб-сайтом"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title">Технокряк</h3>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -94,11 +100,18 @@
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-2.jpg"
                   alt="Баскетболисты"
                   width="370"
+                  
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title">
                     Постер <span lang="en"> Orlean vs Golden Star</span>
@@ -109,11 +122,17 @@
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-3.jpg"
                   alt="Рыба и название ресторана"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -124,11 +143,17 @@
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-4.jpg"
                   alt="Наушники"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title">
                     Проект <span lang="en">Prime</span>
@@ -139,11 +164,17 @@
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-5.jpg"
                   alt="Две коробки"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title">
                     Проект <span lang="en">Boxes</span>
@@ -154,11 +185,18 @@
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-6.jpg"
                   alt="Экран компьютера с веб-сайтом"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title" lang="en">
                     Inspiration has no Borders
@@ -169,11 +207,17 @@
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-7.jpg"
                   alt="Женский журнал"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title">
                     Издание <span lang="en"> Limited Edition</span>
@@ -184,26 +228,38 @@
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-8.jpg"
                   alt="Этикетка"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title">
                     Проект <span lang="en"> LAB</span>
                   </h3>
                   <p class="portfolio-text">Маркетинг</p>
-                </div></a
-              >
+                </div>
+                </a>
             </li>
             <li class="portfolio-item">
               <a href="http://" class="portfolio-link link">
+                <div class="img-holder">
                 <img
                   src="./images/portfolio-img-9.jpg"
                   alt="Этикетка"
                   width="370"
                 />
+                <div class="portfolio-detail">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
                 <div class="portfolio-description">
                   <h3 class="portfolio-title" lang="en">Growing Business</h3>
                   <p class="portfolio-text">Приложение</p>
