--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn hero-btn" data-modal-open>Заказать услугу</button>
+          <button type="button" class="btn hero-btn" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
       <section class="section">
@@ -123,6 +125,9 @@
           <ul class="list example-list">
             <li class="example-item">
               <img src="./images/img-1.jpg" alt="Написание кода" width="370" />
+              <div class="example-description">
+                <h3 class="example-title">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="example-item">
               <img
@@ -130,6 +135,9 @@
                 alt="Разработка мобильной версии"
                 width="370"
               />
+              <div class="example-description">
+                <h3 class="example-title">Мобильные приложения</h3>
+              </div>
             </li>
             <li class="example-item">
               <img
@@ -137,6 +145,9 @@
                 alt="Разработка дизайна"
                 width="370"
               />
+              <div class="example-description">
+                <h3 class="example-title">Дизайнерские решения</h3>
+              </div>
             </li>
           </ul>
         </div>
@@ -419,13 +430,13 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal >
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-<button type="button" class="modal-btn" data-modal-close>
-  <svg class="modal-icon" width="14px" height="14px">
-    <use href="./images/icons.svg#icon-close-black"></use>
-  </svg>
-</button>
+        <button type="button" class="modal-btn" data-modal-close>
+          <svg class="modal-icon" width="14px" height="14px">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
